fixed erroneously deleted hidden and visible classes from css webgui otherwise still works with the rewrite

--- a/webGUI/static/style.css
+++ b/webGUI/static/style.css
@@ -100,6 +100,8 @@ hr {
 .button-leftmost {
     margin-left: 0;
 }
+.gwa-hidden {visibility:hidden;}
+.gwa-visible {visibility:visible;}
 .entry-container-top {
     display: flex;
     flex-direction: column;
